--- a/style.css
+++ b/style.css
@@ -2030,16 +2030,14 @@ input:lang(vi)[type="submit"], .comment-navigation .nav-previous:lang(vi),
   padding-right: 10px;
 }
 
-.picture-spacing {
-  padding: 10px;
-}
-
 .picture-left {
   float: left;
+  padding: 10px 0 10px 25px;
 }
 
 .picture-right {
   float: right;
+  padding: 10px 25px 10px 0;
 }
 
 .hide-for-mobile {
